--- a/libmlxji/Makefile
+++ b/libmlxji/Makefile
@@ -6,7 +6,7 @@
 #    By: ntoniolo <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/02 18:45:43 by ntoniolo          #+#    #+#              #
-#    Updated: 2016/12/05 13:03:31 by ntoniolo         ###   ########.fr        #
+#    Updated: 2017/06/11 17:57:04 by ntoniolo         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,24 +18,23 @@ SRC = srcs/mlxji_clear_img.c srcs/mlxji_draw_line.c srcs/mlxji_hsv_to_rgb.c srcs
 
 OBJET = $(SRC:.c=.o)
 
-.PHONY: all, clean, fclean, re
+.PHONY: all, clean, fclean, re, $(NAME)
 
 all: $(NAME)
 
 $(NAME): $(OBJET)
 	@ar rc $(NAME) $(OBJET) && ranlib $(NAME)
-	@echo "\033[4m\033[1m\033[32m>$(NAME) done.\033[0m"
 
 %.o: %.c
 	@echo "\033[34m$^ \033[0m-> \033[1m\033[37m$@\033[0m"
 	@gcc $(FLAGS) -o $@ -c $^
 
 clean:
-	@echo "\033[31mDelete .o of $(NAME)\033[0m"
+	@echo "Delete .o"
 	@/bin/rm -f $(OBJET)
 
 fclean: clean
-	@echo "\033[31mDelete .o and $(NAME)\033[0m"
+	@echo "Delete .o & .a"
 	@/bin/rm -f $(NAME)
 
 re: fclean all
